# RAGReady

./: .env.example  .gitignore  README.md  diagnose_backend.py  pyproject.toml  rag_pipeline_visualizer.html  tb.txt  update_ui.py
.github/workflows/: ci.yml
.planning/: PROJECT.md  REQUIREMENTS.md  ROADMAP.md  STATE.md  config.json
.planning/phases/01-ingestion-retrieval/: 01-01-PLAN.md  01-01-SUMMARY.md  01-02-PLAN.md  01-02-SUMMARY.md  01-03-PLAN.md  01-03-SUMMARY.md  01-VERIFICATION.md
.planning/phases/02-generation-api-observability/: 02-01-PLAN.md  02-01-SUMMARY.md  02-02-PLAN.md  02-02-SUMMARY.md  02-RESEARCH.md  02-UAT.md  02-VERIFICATION.md
.planning/phases/03-evaluation-cicd-quality-gates/: 03-01-PLAN.md  03-01-SUMMARY.md  03-02-PLAN.md  03-02-SUMMARY.md  03-03-PLAN.md  03-03-SUMMARY.md  03-04-PLAN.md  03-04-SUMMARY.md  03-RESEARCH.md  03-VERIFICATION.md
.planning/phases/04-frontend-portfolio/: 04-01-PLAN.md  04-01-SUMMARY.md  04-02-PLAN.md  04-02-SUMMARY.md  (+4 more)
.planning/research/: ARCHITECTURE.md  FEATURES.md  PITFALLS.md  STACK.md  SUMMARY.md
data/: downtime.json  eval-results.json
docs/: demo-script.md
scripts/: benchmark.py  evaluate.py
src/frontend/: index.html  package.json  pnpm-lock.yaml
src/ragready/: __init__.py
tests/evaluation/: conftest.py  golden_dataset.json  test_benchmark.py  test_quality_gates.py
tests/integration/: __init__.py  test_ingestion_pipeline.py  test_retrieval_pipeline.py
tests/unit/: test_api_routes.py  test_chunker.py  test_extractors.py  test_fusion.py  test_generation_chain.py  test_generation_models.py
(+73 files in other folders)
